--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,23 @@
+/* 
+  * GLOBAL STYLES
+*/
+
+* {
+  border: none;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+}
+
+html {
+  line-height: 1.4;
+  font-size: 62.5%;
+}
+
+/* 
+  * END OF GLOBAL STYLES
+*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
