--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,11 +7,17 @@
   margin: 0;
   padding: 0;
   max-width: 100%;
+  box-sizing: border-box;
 }
 
 html {
   line-height: 1.4;
   font-size: 62.5%;
+}
+
+#root {
+  height: 100vh;
+  width: 100vw;
 }
 
 /* 
